--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <h2>Input Nilai Siswa</h2>
+    <h2>Menampilkan Nilai Siswa</h2>
 
     <form id="nilaiForm">
-        <label for="nilai">Masukkan nilai siswa:</label>
+        <label for="nilai">Masukkan nilai anda :</label>
         <input type="number" id="nilai" name="nilai" required>
 
         <button type="button" onclick="hitungNilai()">Hitung Nilai</button>
