--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Input Nilai Siswa</title>
+    <title>Nilai Siswa</title>
 </head>
 <body>
 
-    <h2>Menampilkan Nilai Siswa</h2>
+    <h3>Menampilkan Nilai Siswa</h3>
 
     <form id="nilaiForm">
         <label for="nilai">Masukkan nilai anda :</label>
